tests/compile_fail/invalid_text_decoration_line_literal.rs
use surgeist_style::TextDecorationLine;

fn main() {
    let _line = TextDecorationLine {
        components: Vec::new(),
        none: true,
    };
}
